# frc-code-scout

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  justfile  pyproject.toml  sgconfig.yml
.clasi/: .clasi.db
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: corpus-builder.md  team-analyst.md
.cursor/rules/: frc-code-scout.mdc
.github/workflows/: deploy-pages.yml  notify-docs-hub.yml  pages.yml
clasi/issues/: agent-single-file-site-dump.md
config/: dotconfig.yaml
data/: README.md  agent-scores.csv  corpus-inventory.md  epa-prediction-dataset.csv  master-dataset.json  rubric-epa-dataset.csv
data/agent-scores/: 1114.json  1155.json  1257.json  1538.json  1572.json  1678.json  190.json  2102.json  2412.json  2485.json  254.json  2658.json  2706.json  2767.json  (+41 more)
docs/: Gemfile  WIKI_CONSOLIDATION_REVIEW.md  _config.yml  elite-arch-review.md  index.md
frc_code_scout.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
knowledge/: INDEX.md
notebooks/: epa-prediction.ipynb  frc-code-analysis.ipynb  rubric-epa-correlation.ipynb
rules/: d1-architecture.yml  d2-coordination.yml  d3-simulation.yml  d4-testing.yml  d5-logging.yml  d6-auto.yml  d7-vision.yml  d8-sustainability.yml
scout/: __init__.py  cli.py  clone.py  codedb.py  config.py  dataset.py  features.py  github.py  history.py  httpc.py  manifest.py  seasons.py  select.py  statbotics.py  suppress.py  teams.py
scripts/: agent_score.py  build_correlation_notebook.py  build_index.sh  build_notebook.py  build_prediction_notebook.py  build_site.py  clone_corpus.sh  discover_repos.sh  generate_llms_full.py  render_diagrams.py  score_rubric.sh  validate_docs.py
site/: .gitignore  hugo.toml
templates/: scoresheet.csv  team-report.md
(+252 files in other folders)
